--- a/Q5/index.html
+++ b/Q5/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <div class="container">
-        <h1>Data Dictionary Generator 📖</h1>
+        <h1>Data Dictionary Generator </h1>
         
         <div class="instructions">
             <h2>How to Use This Tool</h2>
-            <p>This tool generates a data dictionary and a table relationship diagram from a JSON input that defines your database schema[cite: 24, 25].</p>
+            <p>This tool generates a data dictionary and a table relationship diagram from a JSON input that defines your database schema.</p>
             
             <h3>Step 1: Generate the Input JSON from Your Database</h3>
             <p>You need to query your database's metadata to get the table and column information. Here are example queries for popular databases:</p>
