--- a/Q5/index.html
+++ b/Q5/index.html
@@ -70,5 +70,6 @@ WHERE constraint_schema = 'your_database_name';
     </div>
 
     <script src="script.js"></script>
+    <script src="../Q6/event_tracker.js"></script>
 </body>
 </html>
